--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Favicons/browser.png" />
     <meta name="viewport" content="width=device-wid
     th, initial-scale=1.0" />
     <link href="./src/output.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>UTASR - University of Toronto Autonomous Scale Racing</title>
   </head>
   <body>
     <div id="root"></div>
